updating line height on emojies to deal with spacing issues

--- a/userstyle.css
+++ b/userstyle.css
@@ -5,6 +5,7 @@ img.emojie {
 
 span.emojie {
   font-size: 5em !important;
+  line-height: 1.2em !important;
 }
 
 .chat-message, 
